[package]
name = "idris2Grin-support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "idris2Grinsupport"
crate-type = ["cdylib"]

[dependencies.rug]
version = "1.14.0"
default-features = false
features = ["integer"]

